codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_halfwidth_sound_marks.snap
---
source: tui/src/history_cell/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        "▌ Suffice  vtest                                                                ",
        "▌                                                                               ",
        "▌ model     gpt-5-ｶﾞ-ﾊﾟ   /model to change                                      ", // hidden by multi-width symbols: [(19, " "), (22, " ")]
        "▌ directory project                                                             ",
    ],
    styles: [
        x: 0, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
